// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-paragraph renders 1`] = `
<ld-paragraph>
  <mock:shadow-root>
    <p class="ld-paragraph">
      <slot></slot>
    </p>
  </mock:shadow-root>
  Text
</ld-paragraph>
`;

exports[`ld-paragraph renders with size prop 1`] = `
<ld-paragraph size="xs">
  <mock:shadow-root>
    <p class="ld-paragraph ld-paragraph--xs">
      <slot></slot>
    </p>
  </mock:shadow-root>
  Text
</ld-paragraph>
`;
